--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,19 +19,21 @@ $hero-size: 66vh;
   width: 100%;
   height: 100%;
   // height: 66vh;
-  position: absolute;
+  position: relative;
+  // position: absolute;
 
-  perspective: 20px;
-  perspective-origin: center $hero-size/2;
-  transform-style: preserve-3d;
+  // perspective: 20px;
+  // perspective-origin: center $hero-size/2;
+  // transform-style: preserve-3d;
 
   overflow-y: auto;
   overflow-x: hidden;
-
+  z-index: 0;
 }
 
 .img-mock{
-  z-index: -100;
+  z-index: -1;
+  // position: absolute;
   position: absolute;
   width: 100%;
   height: $hero-size;
@@ -47,12 +49,16 @@ $hero-size: 66vh;
 
 .name-badge{
   width: 100%;
+  height: 0;
+  overflow: visible;
   display: flex;
   align-content: center;
   justify-content: center;
   transform: translateY(-50%);
   p{
+    position: absolute;
     @include reset-mbp;
+    height: auto;
     text-align: center;
     padding: 1em 5em;
     border-radius: 2em;
@@ -65,4 +71,5 @@ $hero-size: 66vh;
 .content{
   margin-top: $hero-size;
   background-color: #1C0231;
+  box-shadow: 0 0 1em 0 #1C0231;
 }
