--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,23 @@ body, html{
   overflow: hidden;
 }
 
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
+.trigger {
+  position: fixed;
+  display: block;
+  left: 0;
+  top: 0;
+}
+
+
+.bigyeet {
+  position: fixed;
+  background-color: white;
+  top: 0;
+  padding: 10px;
+  z-index: 1000;
+}
