Added Title bar sticky

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <div class="img-container">
-  <div class="bigyeet">BIG YEEEE1</div>
-
   <div class="img-mock"></div>
   <div class="content">
-    <div class="bigyeet">BIG YEEEE2</div>
-
-    <div class="name-badge">
+    <div class="name-badge" id="name-badge">
       <p>
         Erik Mayrhofer
       </p>
