--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,16 +58,25 @@ $hero-size: 66vh;
     position: absolute;
     @include reset-mbp;
     height: auto;
+    min-width: 0;
     text-align: center;
     padding: 1em 5em;
     border-radius: 2em;
     background-color: white;
     font-family: sans-serif;
     font-size: 2em;
+    transform: translateY(-50%);
+    transition: transform 0.2s, 1s all;
   }
   &.full{
     p{
-      background-color: blue;
+      background-color: white;
+      vertical-align: middle;
+      transform: translateY(0%);
+      min-width: 100%;
+      border-radius: 0;
+      padding: 0.5em 1em;
+      box-shadow: 0 0 1em 0 $orange;
     }
   }
 }
