Finished Name Badge

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <div class="img-container">
   <div class="img-mock"></div>
-  <div class="content" #content>
-    <div class="name-badge" id="name-badge">
-      <p (click)="scrollToContent()">
-        Erik Mayrhofer
-      </p>
+
+  <div class="name-badge-container">
+    <div class="name-badge-row" id="name-badge">
+      <div class="name-badge" (click)="scrollToContent()">
+        <p>
+          Erik Mayrhofer
+        </p>
+      </div>
     </div>
+  </div>
+
+  <div class="content-holder" #content>
     <router-outlet></router-outlet>
     <div class="placeholder">aaaaa</div>
   </div>
