--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,28 +13,22 @@ $hero-size: 66vh;
 .placeholder{
   height: 200vh;
   width: 100%;
+  color: white;
 }
 
 .img-container{
   width: 100%;
   height: 100%;
-  // height: 66vh;
   position: relative;
-  // position: absolute;
-
-  // perspective: 20px;
-  // perspective-origin: center $hero-size/2;
-  // transform-style: preserve-3d;
-
   overflow-y: auto;
   overflow-x: hidden;
   z-index: 0;
 }
 
 .img-mock{
-  z-index: -1;
+  z-index: -2;
   // position: absolute;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: $hero-size;
   background: repeating-linear-gradient($angle, $alpurple 0%, $alorange $dist, $alpurple $dist+$antialias),
@@ -46,43 +40,64 @@ $hero-size: 66vh;
   }
 }
 
-
-.name-badge{
+$name-badge-height: 6rem;
+.name-badge-container {
   width: 100%;
-  height: 0;
-  overflow: visible;
+  margin: 0;
+  margin-top: -$name-badge-height/2;
+  height: $name-badge-height;
   display: flex;
-  align-content: center;
+  flex-direction: column;
   justify-content: center;
-  p{
-    position: absolute;
-    @include reset-mbp;
-    height: auto;
-    min-width: 0;
-    text-align: center;
-    padding: 1em 5em;
-    border-radius: 2em;
+  align-items: center
+}
+
+.name-badge-row {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  width: 100%;
+  top: 0px !important;
+  height: $name-badge-height;
+  .name-badge{
+    position: sticky;
+    padding: 0em 10em;
     background-color: white;
-    font-family: sans-serif;
-    font-size: 2em;
-    transform: translateY(-50%);
-    transition: transform 0.2s, 1s all;
+    border-radius: 2em;
+    widows: auto;
+    min-width: 0px;
+    transition: min-width 0.3s, all 1s;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    p {
+      padding: 0;
+      margin: 0;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 300;
+      font-size: 2.5rem;
+    }
   }
   &.full{
-    p{
-      background-color: white;
-      vertical-align: middle;
-      transform: translateY(0%);
+    .name-badge{
       min-width: 100%;
+      padding: 0em 1em;
       border-radius: 0;
-      padding: 0.5em 1em;
-      box-shadow: 0 0 1em 0 $orange;
     }
   }
 }
 
-.content{
-  margin-top: $hero-size;
+.content-holder{
+  margin-top: -$name-badge-height/2;
+  padding-top: $name-badge-height;
   background-color: #1C0231;
   box-shadow: 0 0 1em 0 #1C0231;
+  .content{
+    z-index: 1;
+  }
 }
