--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+
 <div class="img-container">
   <div class="img-mock"></div>
+
 
   <div class="name-badge-container">
     <div class="name-badge-row" id="name-badge">
@@ -8,6 +10,15 @@
           Erik Mayrhofer
         </p>
       </div>
+    </div>
+
+    <div class="static-top-menu">
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <button class="print">Print</button>
     </div>
   </div>
   <div class="content-holder" #content>
