--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,166 +1,37 @@
 @import '../olib.scss';
 
-$orange: #FF4500;
-$purple: #430873;
-$alpha: 0.5;
-$alorange: adjust-color($orange, $alpha: -$alpha);
-$alpurple: adjust-color($purple, $alpha: -$alpha);
-$angle: 60deg;
-$dist: 33%;
-$antialias: 0.08%;
-$hero-size: 66vh;
+$sidebar-width: 25rem;
 
-.placeholder{
-  height: 200vh;
-  width: 100%;
-  color: white;
+.placeholder {
+  height: 400vh;
 }
 
-.img-container{
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow-y: auto;
-  overflow-x: hidden;
-  z-index: 0;
+.pageholder{
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-.img-mock{
-  z-index: -2;
-  // position: absolute;
-  position: relative;
-  width: 100%;
-  height: $hero-size;
-  background: repeating-linear-gradient($angle, $alpurple 0%, $alorange $dist, $alpurple $dist+$antialias),
-            repeating-linear-gradient(-$angle, $alpurple 0%, $alorange $dist, $alpurple $dist+$antialias);
-  transform: translateZ(-10px) scale(1.5);
-  transition: 2s transform;
-  &:hover{
-    transform: translateZ(4px);
-  }
-}
-
-$name-badge-height: 6rem;
-$top-bar-height: $name-badge-height;
-.name-badge-container {
-  width: 100%;
-  margin: 0;
-  margin-top: -$name-badge-height/2;
-  height: $name-badge-height;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-}
-
-.name-badge-row {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  justify-items: center;
-  align-content: center;
-  top: 0px !important;
-  height: $name-badge-height;
-  .name-badge{
-    position: relative;
-    padding: 0em 10em;
-    background-color: white;
-    border-radius: 2em;
-    min-width: 30vw;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    // justify-content: center;
-    align-items: center;
-
-    transition: min-width 0.3s ease-out, all 1s;
-    p {
-      padding: 0;
-      margin: 0;
-      min-width: 100%;
-      text-align: center;
-      font-family: 'Raleway', sans-serif;
-      font-weight: 300;
-      font-size: 2.5rem;
-      transition: all 1s;
-    }
-  }
-
-  &.full{
-    .name-badge{
-      // justify-content: left;
-      min-width: 100%;
-      padding: 0em 8em;
-      border-radius: 0;
-      p {
-        min-width: 0;
-      }
-    }
-  }
+.sidebar-holder{
+  left: -$sidebar-width;
+  position: absolute;
+  width: $sidebar-width;
+  transition: 1s left;
 }
 
 .content-holder{
-  margin-top: -$name-badge-height/2;
-  padding-top: $name-badge-height;
-  background-color: #1C0231;
-  box-shadow: 0 0 1em 0 #1C0231;
-  .content{
-    z-index: 1;
-  }
-}
-
-.static-top-menu {
-  position: fixed;
-  // background-color: #8822aa66;
-  height: $top-bar-height;
-  top: 0;
-  left: 0;
+  position: absolute;
   width: 100vw;
-  display: flex;
-  align-items: center;
-  padding: 0.5rem;
-  box-sizing: border-box;
-  .hamburger {
-
-    $ham-height: 2.25rem;
-    $ham-width: 4rem;
-    $line-height: 0.25rem;
-
-    width: $ham-width;
-    height: $ham-height;
-    margin: 1rem;
-    margin-left: 1.5rem;
-    margin-right: auto;
-
-
-    .line{
-
-      position: relative;
-
-      height: $line-height;
-      background-color: #333;
-      margin: 0;
-      margin-top: ($ham-height - 3 * $line-height)/2;
-      transition: 0.4s;
-      &:first-of-type{
-        margin-top: 0;
-      }
-    }
-  }
-  .print {
-    background-color: #00000066;
-    border: 1px solid #000000;
-    // border: none;
-    box-shadow: 0 0 3px 0 #000000;
-    font-size: 2rem;
-    margin-right: 1em;
-    border-radius: 2em;
-    padding: 0.2em 2em;
-    color: #ffffffaa;
-  }
+  left: 0;
+  transition: 1s left, 1s filter;
 }
 
-.full {
-
+.pageholder.sidebar-open{
+  .sidebar-holder{
+    left: 0;
+  }
+  .content-holder {
+    left: $sidebar-width/2;
+    filter: brightness(0.5);
+  }
 }
