--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,13 +17,26 @@ $sidebar-width: 25rem;
   position: absolute;
   width: $sidebar-width;
   transition: 1s left;
+  height: 100%;
+  .page-overlay {
+    position: absolute;
+    top: 0;
+    left: $sidebar-width;
+    width: 100vw;
+    height: 100vh;
+  }
 }
 
 .content-holder{
   position: absolute;
   width: 100vw;
+  height: 100%;
   left: 0;
   transition: 1s left, 1s filter;
+  .content {
+    height: 100%;
+    overflow-y: auto;
+  }
 }
 
 .pageholder.sidebar-open{
@@ -33,5 +46,10 @@ $sidebar-width: 25rem;
   .content-holder {
     left: $sidebar-width/2;
     filter: brightness(0.5);
+    pointer-events: none;
   }
+}
+
+.tmp {
+  position: fixed;
 }
